tests/cases/standard-library/errors/string/std-string-append-u64-different-zone.ari
fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);
  var text = std::string::new(ref mut source, 1);
  text.append_u64_in(ref mut target, 12u64);
  zone::destroy(target);
  zone::destroy(source);
  return text.len();
}
